--- a/config.toml
+++ b/config.toml
@@ -3,13 +3,20 @@ languageCode = "en"
 title = "Simone Barbieri"
 theme = "coder"
 
-paginate = 20
 pygmentsStyle = "bw"
 pygmentsCodeFences = true
 pygmentsCodeFencesGuessSyntax = true
 enableEmoji = true
 # Enable Disqus comments
 # disqusShortname = "yourdiscussshortname"
+
+[markup.goldmark.renderer]
+    unsafe= true
+
+[pagination]
+    disableAliases = false
+    pagerSize = 20
+    path = 'page'
 
 [params]
     author = "Dr. Simone Barbieri"
@@ -74,13 +81,13 @@ enableEmoji = true
     name = "Mastodon"
     rel = "me"
     url = "https://mastodon.social/@simone_barbieri"
-    icon = "fa fa-mastodon"
+    icon = "fa-brands fa-mastodon"
     weight = 4
 
 [[params.social]]
     name = "Bluesky"
     url = "https://bsky.app/profile/barbierisimone.com"
-    icon = "fa fa-bluesky"
+    icon = "fa-brands fa-bluesky"
     weight = 5
 
 # [[params.social]]
